# openTEPES

./: .gitignore  .pypirc  .readthedocs.yaml  APIT.pypirc  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  README.rst.txt  environment.yaml  index.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_run.py  tox.ini
.claude/: CLAUDE.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  colab-compatibility.yml  colab-test.yml  python-app.yml  python-package-conda.yml
case_studies/: README.md
cases/9n/: oT_Data_Generation_9n.csv  oT_Data_Parameter_9n.csv  oT_Data_VariableMinGeneration_9n.csv
cases/SEIN/: oT_Data_Duration_SEIN.csv
configuration/: configuration.md
doc/: Download.rst  InputData.rst  Introduction.rst  MathematicalFormulation.rst  OutputResults.rst  Papers.rst  Projects.rst  conf.py  index.rst
doc/img/: IIT.tif  README.md
doc/md/: Characteristics.md  ContactUs.md  Download.md  InputData.md  Introduction.md  MathematicalFormulation.md  OutputResults.md  Papers.md  Projects.md  QA.md  SolutionMethods.md  Sweeps.md  conf.py  index.md  requirements.txt
doc/rst/: .readthedocs.yaml  Characteristics.rst  ContactUs.rst  Download.rst  InputData.rst  Introduction.rst  MathematicalFormulation.rst  OutputResults.rst  Papers.rst  Projects.rst  QA.rst  conf.py  index.rst  requirements.txt  switch.rst
doc/rts/: InputData.rst  MathematicalFormulation.rst  OutputResults.rst  Projects.rst
docs/rst/: ContactUs.rst  Download.rst  MathematicalFormulation.rst  Papers.rst  conf.py
examples/: examples.py
input/9n/: oT_Data_MinimumStorage_9n.csv  oT_PotentialBenefitRatio_9n.csv
input/SEIN/: oT_Data_Cable_SEIN.csv  oT_Data_Network_SEIN.csv  oT_Dict_Node_SEIN.csv
input/sSEP/: oT_Dict_NodeToZone_sSEP.csv  oT_Dict_Technology_sSEP.csv
notebooks/: notebooks.md
openTEPES/: __init__.py  __main__.py  _input_parity_test.py  _output_parity_test.py  command_line.py  openTEPES.mapbox_token  openTEPES.py  openTEPES_Cases.py  openTEPES_DataConfiguration.py  openTEPES_InMemorySource.py  openTEPES_InputCSVSource.py  openTEPES_InputData.py  openTEPES_InputDuckDBSource.py  openTEPES_InputSchema.py  openTEPES_InputSource.py  openTEPES_Main.py  openTEPES_ModelFormulation.py  openTEPES_ModelFormulationElectricity.py  openTEPES_ModelFormulationHeat.py  openTEPES_ModelFormulationHydro.py  openTEPES_ModelFormulationHydrogen.py  openTEPES_ModelFormulationInvestment.py  openTEPES_ModelFormulationObjective.py  openTEPES_OutputResults.py  openTEPES_OutputResultsCommon.py  openTEPES_OutputResultsEconomic.py  openTEPES_OutputResultsGeneration.py  openTEPES_OutputResultsHeat.py  openTEPES_OutputResultsHydrogen.py  openTEPES_OutputResultsInvestment.py  openTEPES_OutputResultsMapCommon.py  openTEPES_OutputResultsNetwork.py  openTEPES_OutputResultsRawDump.py  openTEPES_OutputResultsSectorCoupling.py  openTEPES_OutputResultsSink.py  openTEPES_OutputResultsStorage.py  openTEPES_OutputResultsSummary.py  openTEPES_ProblemSolving.py  openTEPES_ProblemSolvingBenders.py  openTEPES_ProblemSolvingDualExtraction.py  (+15 more)
openTEPES/9n/: oT_Data_DemandGas_9n.csv  (+66 more)
open_tepes/: __init__.py  input_data.py  openTEPES.py  openTEPES_InputData.py  openTEPES_ModelFormulation.py  open_tepes.py
scripts/: install.sh  openTEPES.py  openTEPES_run.py  scripts.md
src/: setup.py  test_run.py
tests/: 01_create_dataset.py  01_model_execution.py  02_create_dataset.py  03_create_dataset.py  04_create_dataset.py  SystemStatesExample.py  SystemStatesExample_Benders.py  oT_local_test.py  test_direct_run.py  test_duckdb_roundtrip.py  test_gitinfo.py  test_heat_input_validation.py  test_heat_investment_typo.py  test_input_duckdb_writer.py  test_output_parity.py  test_run.py  test_sample.py  test_thread_cap.py
(+851 files in other folders)
