[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "openTEPES"
dist-name = "openTEPES"
author = "IIT-EnergySystemModels"
author-email = "andres.ramos@comillas.edu"
home-page = "https://opentepes.readthedocs.io/en/latest/index.html"
classifiers = [
  "Development Status :: 5 - Production/Stable","Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",]
requires-python = ">=3.11"
description-file = "README.rst"
requires = [
  "altair>=5.5.0",
  "colour>=0.1.5",
  "dill>=0.3.8",
  "duckdb>=1.3.2",
  "jsonschema>=4.26.0",
  "matplotlib>=3.10.0",
  "networkx>=3.6.1",
  "numpy>=2.0.2",
  "pandas>=2.2.2",
  "plotly>=5.24.1",
  "psutil>=5.9.5",
  "pyomo>=6.9.5",
  ]

[tool.flit.scripts]
openTEPES_Main = "openTEPES:main"
