[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "openTEPES"
dist-name = "openTEPES"
author = "IIT-EnergySystemModels"
author-email = "andres.ramos@comillas.edu"
home-page = "https://opentepes.readthedocs.io/en/latest/index.html"
classifiers = [
  "Development Status :: 5 - Production/Stable","Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",]
requires-python = ">=3.11"
description-file = "README.rst"
requires = [
  "altair>=5.5,<6",
  "amplpy>=0.16.0,<1",
  "ausankey>=1.8,<2",
  "colour>=0.1.5,<1",
  "dill>=0.3.8",
  "duckdb>=1.3,<2",
  "gurobipy>=13.0.0,<14",
  "jsonschema>=4.25.1,<5",
  "matplotlib>=3.10,<4",
  "networkx>=3.6,<4",
  "numpy>=2.0.2,<3",
  "pandas>=2.2.2,<3",
  "plotly>=6.5.0,<7",
  "psutil>=7.0.0,<8",
  "pyomo>=6.9.5,<7",
  "streamlit>=1.51.0,<2",
  ]

[tool.flit.scripts]
openTEPES_Main = "openTEPES:main"
