[metadata]
name = openTEPES
version = 2.0.6
author = IIT-EnergySystemModels
author_email = andres.ramos@comillas.edu
license = GPL-3.0 License
description = Open Generation and Transmission Operation and Expansion Planning Model with RES and ESS (openTEPES)
long_description = file: README.md
long_description_content_type = text/x-md
url = https://github.com/IIT-EnergySystemModels/openTEPES

[options]
packages = openTEPES
include_package_data = True
install_requires =
    setuptools >= 41
    numpy
    pandas
    pyomo
    psutil
    matplotlib
    cartopy
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.package_data]
openTEPES =
    openTEPES/*